--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,83 @@
 body {
   margin: 0;
   padding: 0;
-  background: #14495e;
+  background: rgb(8, 8, 8);
+}
+
+h1 {
+  color: #FCCF00;
+  font: 2em sans-serif;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  }
+  img {
+    display: block;    
+    margin-left: auto;
+    margin-right: auto;
+  }
+  footer {
+    display: flex;
+    color: #FCCF00;
+    justify-content: center;
+}
+
+.container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
+.portrait {
+  border: 5px solid #FCCF00;
+  background: rgb(82, 210, 241);;
+  flex: 1;
+  align-items: center;
+  width: 212px;  
+  margin-top: 20px;
+  position: relative;
+}
+button {
+  background-color: #0a0a0a; /* Green */
+  border: 5px solid #FCCF00;
+  color: #FCCF00;
+  padding: 18px 32px;
+  text-align: center;
+  font-weight:bold;    
+  text-decoration: underline;    
+  display: inline-block;
+  font-size: 16px;
+}
+#buttons {
+  display: flex;
+  justify-content: center;
+  height: 70px;
 }
 
 .eyes {
   position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 35%;
+  transform: translate(-8%, -2%);
   width: 100%;
   text-align: center;
 }
 
 .eye {
-  width: 240px;
-  height: 120px;
+  border: 3px solid #000000;
+  width: 81px;
+  height: 81px;
   background: #fff;
   display: inline-block;
-  margin: 40px;
+  margin: -6px;
   border-radius: 50%;
   position: relative;
   overflow: hidden;
 }
 
 .ball {
-  width: 80px;
-  height: 80px;
+  width: 20px;
+  height: 20px;
   background: #000;
   position: absolute;
   top: 50%;
