--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,61 @@
+@font-face {
+  font-family: Simpsonfont;
+  src: url(fonts/Simpson.otf);
+}
 body {
   margin: 0;
   padding: 0;
-  background: rgb(8, 8, 8);
+  background: rgb(250, 250, 250);
+  background-image: url("images/cloud.png");
+  background-size: 100%;  
+  background-attachment: fixed;   
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 h1 {
   color: #FCCF00;
-  font: 2em sans-serif;
+  font: 3em sans-serif;
   font-weight: bold;
-  display: flex;
+  font-family: Simpsonfont;  
+  /*display: flex;*/
   justify-content: center;
-  }
-  img {
-    display: block;    
-    margin-left: auto;
-    margin-right: auto;
-  }
-  footer {
-    display: flex;
-    color: #FCCF00;
-    justify-content: center;
+  text-shadow: 1px 1px 1px #f3a719,
+    1px 2px 1px #f3a719,
+    1px 3px 1px #f3a719,
+    1px 4px 1px #f3a719,
+    1px 5px 1px #f3a719,
+    1px 6px 1px #f3a719,
+    1px 7px 1px #131212,
+    1px 8px 1px #131212,
+    1px 9px 1px #131212;
+}
+
+a {
+  color: #FCCF00;
+  font: 1.5em sans-serif;  
+  font-family: Simpsonfont;    
+  justify-content: center;
+  text-shadow: 1px 1px 1px #f3a719,
+    1px 2px 1px #f3a719,
+    1px 3px 1px #131212,
+    1px 4px 1px #131212;
+}
+
+img {
+  display: block;    
+  margin-left: auto;
+  margin-right: auto;
+}
+footer {
+  margin-top: 150px;
+  display: flex;
+  font-family: Simpsonfont; 
+  font-weight:bold;    
+  color: #f3a719;
+  justify-content: center;
+  text-shadow: 1px 1px 1px #131212,
+    1px 2px 1px #131212;
 }
 
 .container {
@@ -29,30 +65,34 @@ h1 {
   align-items: center;
   height: 100%;
 }
-.portrait {
-  border: 5px solid #FCCF00;
-  background: rgb(82, 210, 241);;
-  flex: 1;
-  align-items: center;
-  width: 212px;  
-  margin-top: 20px;
+.shadow{
+  -webkit-box-shadow: 0 15px 6px -6px #000000;
+     -moz-box-shadow: 0 15px 6px -6px #000000;
+          box-shadow: 0 15px 6px -6px #000000;
+}
+
+.frame {  
+  margin-top: 10px;
+  width: 220px;
+  height: 350px;
+  border: 25px solid rgb(53, 47, 47);
+  background: #eee;
+  flex: 1;    
+  padding: 15px 10px;
   position: relative;
 }
-button {
-  background-color: #0a0a0a; /* Green */
-  border: 5px solid #FCCF00;
-  color: #FCCF00;
-  padding: 18px 32px;
-  text-align: center;
-  font-weight:bold;    
-  text-decoration: underline;    
-  display: inline-block;
-  font-size: 16px;
+.portrait {
+  border: 5px solid #f3a719;
+  background: rgb(35, 201, 243);;
+  flex: 1;
+  align-items: center;  
+  position: relative;
 }
+
 #buttons {
   display: flex;
   justify-content: center;
-  height: 70px;
+  height: 50px;
 }
 
 .eyes {
