--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,10 @@
   font-family: Simpsonfont;
   src: url(fonts/Simpson.otf);
 }
-body {
+
+
+
+body {  
   margin: 0;
   padding: 0;
   background: rgb(250, 250, 250);
@@ -11,6 +14,14 @@ body {
   background-attachment: fixed;   
   background-position: center;
   background-repeat: no-repeat;
+  background-color: #005994;
+}
+
+
+
+header {
+  width: 100%;
+  text-align: center;
 }
 
 h1 {
@@ -33,6 +44,7 @@ h1 {
 
 a {
   color: #FCCF00;
+  padding: 0 1em;
   font: 1.5em sans-serif;  
   font-family: Simpsonfont;    
   justify-content: center;
@@ -41,6 +53,26 @@ a {
     1px 3px 1px #131212,
     1px 4px 1px #131212;
 }
+
+@media only screen and (max-width: 500px) {
+  h1 {    
+  font-size: 1.5em;  
+  text-shadow: 1px 1px 1px #f3a719,
+    1px 2px 1px #f3a719,
+    1px 3px 1px #f3a719,
+    1px 4px 1px #f3a719,
+    1px 5px 1px #131212,
+    1px 6px 1px #131212,
+    1px 4px 1px #131212;
+  }
+
+  a {
+    font-size: 1.1em;    
+  }
+
+}
+
+
 
 img {
   display: block;    
@@ -90,6 +122,7 @@ footer {
 }
 
 #buttons {
+  width: 100%;
   display: flex;
   justify-content: center;
   height: 50px;
